[package]
name = "ssqueeze_rs"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
python-source = "python"  # Only needed if you have Python files
features = ["pyo3/extension-module"]

[lib]
name = "_rs"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
cudarc = "0.13.9"
ndarray = { version = "0.16.1", features = ["rayon"] }
ndarray-stats = "0.6.0"
num = "0.4.3"
num-complex = "0.4.6"
num-traits = "0.2.19"
numpy = "0.23.0"
pyo3 = { version = "^0.23.0", features = ["extension-module", "abi3-py39"] }
rayon = "1.10.0"
realfft = "3.4.0"
rustfft = "6.2.0"
wide = "0.7.32"


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
